--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -13,11 +13,12 @@
 @media only screen and (min-width: 1500px) {
 }
 
-.mainContainer .index {
+.mainContainer .index{
   border-top: 0;
   margin: 0 auto;
-  max-width: 650px;
+  max-width: 700px;
   padding: 0 10px;
+  text-align:center;
 }
 
 .projectTitleLogo {
